--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gilek/yii2-gtreetable",
+    "name": "carl/yii2-gtreetable",
     "description": "yii2-gtreetable is an extension of Yii 2 Framework, which is wrapper for bootstrap-gtreetable plug-in, on the other hand it provides functionality which allows to save the nodes states into database.",
     "keywords": ["yii2", "extension", "gtreetable", "tree", "nested"],
     "homepage": "https://github.com/gilek/yii2-gtreetable",
